Fix toast and softkeys
Made `.toast` fixed to the top.
Made `.softkeys` fixed to the bottom, fixed width to prevent overflowing.

--- a/kaios-native-ui.css
+++ b/kaios-native-ui.css
@@ -149,7 +149,7 @@
 html,
 body {
   width: 100vw;
-  padding: 0 0 calc(var(--softkeys-height) + var(--softkeys-padding)) 0;
+  padding: 0 0 var(--softkeys-height) 0;
   margin: 0;
 }
 
